--- a/Project/AMS/templates/a/reports.html
+++ b/Project/AMS/templates/a/reports.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="card shadow p-3 mb-5 bg-white rounded"
                                 style="border-color:#30aab8; border-width: 1px; padding: 0px !important; margin-bottom: 30px !important;">
-                                <h5 class="card-header">Sales Statistics Over The Last Year</h5>
+                                <h5 class="card-header">Sales Statistics Over the Last Year</h5>
                                 <div class="card-body" style="padding-bottom:1px !important">
                                         <canvas id="myBarChart">
                                         </canvas>
@@ -135,8 +135,8 @@
                 data: {
                         labels: {{last_year[0]|tojson}},
                         datasets: [{
-                                label: 'Tickets Sold:',
-                                data: {{last_year[1]}},
+                                label: 'Tickets Sold',
+                                data: {{last_year[1]|tojson}},
                                 // data: [1,2,3,4,5,6,7,8,9,10,11,12],
                                 backgroundColor: ["rgba(255, 99, 132, 0.2)",
                                         "rgba(255, 159, 64, 0.2)",
@@ -144,7 +144,6 @@
                                         "rgba(75, 192, 192, 0.2)",
                                         "rgba(54, 162, 235, 0.2)",
                                         "rgba(153, 102, 255, 0.2)",
-
                                         "rgba(63, 188, 255, 0.2)",
                                         "rgba(227, 186, 124, 0.2)",
                                         "rgba(174, 229, 63, 0.2)",
