--- a/Project/AMS/templates/a/settings.html
+++ b/Project/AMS/templates/a/settings.html
@@ -31,21 +31,42 @@
     Dest.</a>
 </li>
 {%endblock%}
+
 {% block panel%}
 <div class="row">
   <div class="col-lg-3"></div>
   <div class="col-lg-6">
     <div class="card shadow p-3 mb-5 bg-white rounded"
-      style="border-color:#30aab8; border-width: 1px;padding:35px !important; padding-left: 100px !important; padding-right: 100px !important">
+      style="border-color:#30aab8; border-width: 1px;padding:35px !important; padding-left: 60px !important; padding-right: 60px !important">
       <h5 class="card-title" style="color:#30aab8">Personal Profile</h5>
-      Username: {{username}} <br>
-      First Name: {{fname}} <br>
-      Last Name: {{lname}} <br>
-      Date of Birth: {{bday}} <br>
-      Airline: {{airline}} <br>
-      Phones: {% for phone in phones %}
-      {{phone[0]}},
-      {% endfor %}
+      <table class="table table-sm table-borderless">
+        <tr>
+          <th style="width: 35%">Username</td>
+          <td>{{username}}</td>
+        </tr>
+        <tr>
+          <th>First Name</td>
+          <td>{{fname}}</td>
+        </tr>
+        <tr>
+          <th>Last Name</td>
+          <td>{{lname}}</td>
+        </tr>
+        <tr>
+          <th>Date of Birth</td>
+          <td>{{bday}}</td>
+        </tr>
+        <tr>
+          <th>Airline</td>
+          <td>{{airline}}</td>
+        </tr>
+        <tr>
+          <th>Phones</td>
+          <td>{% for phone in phones %}
+            {{phone[0]}},
+            {% endfor %}</td>
+        </tr>
+      </table>
       <div class="dropdown-divider"></div>
       <h5 class="card-title" style="color:#30aab8">Add Phone Number</h5>
       {% with messages = get_flashed_messages() %}
@@ -60,8 +81,8 @@
       <form action="#" method="POST" style="margin:0px;">
         <div class="form-group">
           <label for="phone">Phone Number</label>
-        <input class="form-control" id="phone" type="number" name="phone_number">
-      </div>
+          <input class="form-control" id="phone" type="number" name="phone_number" required>
+        </div>
         <input class="btn btn-success" type="submit" value="Add">
       </form>
     </div>
