--- a/Project/AMS/templates/b/flights.html
+++ b/Project/AMS/templates/b/flights.html
@@ -1,27 +1,78 @@
-{% extends "index.html"%}
-{% block content%}
- <h1>My Flights</h1>
- {% if flights %}
- <table>
-    <tr>
-        <th>Customer Name</th>
-        <th>Customer Email</th>
-        <th>Airline</th>
-        <th>Departure Time</th>
-        <th>Departure Airport</th>
-        <th>Arrive Time</th>
-        <th>Arrive Airport</th>
-        <th>Flight Status</th>
-    </tr>
-    {% for items in flights %}
-    <tr>
-        {% for item in items %}
-        <td>{{item}}</td>
-        {% endfor %}
-    </tr>
-    {% endfor %}
-    </table>
- {% else %}
- <h2>You haven't ordered any flight</h2>
- {% endif%}
- {% endblock %}
+{% extends "dashboard.html"%}
+{%block tab%}
+<li class="nav-item">
+    <a class="nav-link active" id="history-tab" href="/b/flights" role="tab" aria-controls="history"
+        aria-selected="true">History
+        Order</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" id="stats-tab" href="/b/commission" role="tab" aria-controls="stats"
+        aria-selected="false">Commission</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" id="stats-tab" href="/b/customer" role="tab" aria-controls="stats" aria-selected="false">Top
+        Customer</a>
+</li>
+{%endblock%}
+{% block panel%}
+<div class="row">
+    <div class="col-lg">
+        <div class="card shadow p-3 mb-5 bg-white rounded" style="border-color:#30aab8; border-width: 1px; padding: 0px !important; margin-bottom: 40px;">
+            <div class="card-body" style="padding:0">
+                {% if flights %}
+                <div class="table-responsive">
+                    <table class="table table-hover" style="margin:0">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>Customer Name</th>
+                                <th>Customer Email</th>
+                                <th>Airline</th>
+                                <th>Departure Time</th>
+                                <th>Departure Airport</th>
+                                <th>Arrive Time</th>
+                                <th>Arrive Airport</th>
+                                <th>Flight Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for items in flights %}
+                            <tr>
+                                {% for item in items %}
+                                <td>{{item}}</td>
+                                {% endfor %}
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                    {% else %}
+                    <h2>You haven't ordered any flight</h2>
+                </div>
+                {% endif%}
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<style>
+    #searchhis:hover {
+        color: #30aab8 !important;
+    }
+
+    .table-hover tbody tr td,
+    .table-hover tbody tr th {
+        border-color: #a2e6ee
+    }
+
+    .table .thead-light th,
+    .table-hover tbody tr:hover td,
+    .table-hover tbody tr:hover th {
+        background-color: #a2e6ee;
+    }
+
+    .table .thead-light th {
+        border-top: 0;
+        border-color: white
+    }
+</style>
+{% endblock %}
