basic functions complete

--- a/Project/AMS/templates/a/index_a.html
+++ b/Project/AMS/templates/a/index_a.html
@@ -1,2 +1,7 @@
-{% extends "index.html"%}
-    
+<html>
+    <head>
+        <script>
+        window.location.href = '/a/flights';
+        </script>
+    </head>
+</html>
