--- a/Project/AMS/templates/b/flights.html
+++ b/Project/AMS/templates/b/flights.html
@@ -45,7 +45,7 @@
                         </tbody>
                     </table>
                     {% else %}
-                    <h2>You haven't ordered any flight</h2>
+                    <h2 class="text-center" style="padding:2vw">You haven't ordered any flight</h2>
                 </div>
                 {% endif%}
             </div>
