--- a/Project/AMS/templates/c/flights.html
+++ b/Project/AMS/templates/c/flights.html
@@ -54,11 +54,12 @@
             <br>
         </div> -->
         <div class="col-lg">
-            <div class="card" style="border-color:#30aab8; border-width: 2px; padding: 0px">
+            <div class="card shadow p-3 mb-5 bg-white rounded"
+                style="border-color:#30aab8; border-width: 1px; padding: 1px !important; margin-bottom: 10px !important;">
                 <div class="card-body" style="padding:0">
                     {% if flights %}
                     <div class="table-responsive">
-                        <table class="table table-hover" style="margin:0">
+                        <table class="table table-striped" style="margin:0">
                             <thead class="thead-light">
                                 <tr>
                                     <th>Airline</th>
@@ -80,7 +81,7 @@
                             </tbody>
                         </table>
                         {% else %}
-                        <h2>You haven't ordered any flight</h2>
+                        <h2 class="text-center" style="padding:2vw">You haven't ordered any flight</h2>
                     </div>
                     {% endif%}
                 </div>
@@ -90,27 +91,4 @@
         <br>
     </div>
 </div>
-
-
-<style>
-    #searchhis:hover {
-        color: #30aab8 !important;
-    }
-
-    .table-hover tbody tr td,
-    .table-hover tbody tr th {
-        border-color: #a2e6ee
-    }
-
-    .table .thead-light th,
-    .table-hover tbody tr:hover td,
-    .table-hover tbody tr:hover th {
-        background-color: #a2e6ee;
-    }
-
-    .table .thead-light th {
-        border-top: 0;
-        border-color: white
-    }
-</style>
 {%endblock%}
