--- a/Project/AMS/templates/a/settings.html
+++ b/Project/AMS/templates/a/settings.html
@@ -4,32 +4,9 @@
   <a class="nav-link" id="history-tab" href="/a/flights" role="tab" aria-controls="history" aria-selected="true">Current
     Flights</a>
 </li>
-<li class="nav-item" style="visibility:hidden">
-
-  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-    aria-expanded="false">Add</a>
-  <div class="dropdown-menu">
-    <a class="dropdown-item" href="/a/addflights">Add Flights</a>
-    <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="/a/addplane">Add Plane</a>
-    <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="/a/addairport">Add Airport</a>
-  </div>
-</li>
-<li class="nav-item" style="visibility:hidden">
-  <a class="nav-link" href="/a/ba" role="tab" aria-controls="stats" aria-selected="false">Booking
-    Agent</a>
-</li>
-<li class="nav-item" style="visibility:hidden">
-  <a class="nav-link" href="/a/customer" role="tab" aria-controls="stats" aria-selected="false">Frequent Customer</a>
-</li>
-<li class="nav-item" style="visibility:hidden">
-  <a class="nav-link" href="/a/reports" role="tab" aria-controls="stats" aria-selected="false">Sales Report</a>
-</li>
-<li class="nav-item" style="visibility:hidden">
-  <a class="nav-link active" href="/a/revenue" role="tab" aria-controls="stats" aria-selected="false">Revenue & Top
-    Dest.</a>
-</li>
+<script>
+  document.title = 'Profile | Contrails';
+</script>
 {%endblock%}
 
 {% block panel%}
