--- a/Project/AMS/templates/c/bill.html
+++ b/Project/AMS/templates/c/bill.html
@@ -14,36 +14,51 @@
 
 <div class="container-fluid" style="padding:0px">
     <div class="row">
+                <!-- Filter -->
+                <div class="col-lg-3">
+                        <div class="card shadow-lg" style="background-color:#30aab8; color: white; padding: 0px">
+                            <h5 class="card-header">Time Filter</h5>
+                            <div class="card-body">
+                                <form action="#" method="POST">
+                                    <div class="form-group">
+                                        <label for="start">Start Date</label>
+                                        <input type="text" class="form-control" id="start" name="start_date"
+                                            placeholder="YYYY-MM-DD" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="end">End Date</label>
+                                        <input type="text" class="form-control" id="end" name="end_date" placeholder="YYYY-MM-DD"
+                                            required>
+                                    </div>
+                                    <script>
+                                        $('#start').datepicker({
+                                            autoclose: true,
+                                            todayHighlight: true,
+                                            format: 'yyyy-mm-dd'
+                                        });
+                                        $('#end').datepicker({
+                                            autoclose: true,
+                                            todayHighlight: true,
+                                            format: 'yyyy-mm-dd'
+                                        });
+                                    </script>
+                                    <button type="submit" value="Submit" id="searchhis" class="btn btn-outline-light btn-block"
+                                        style="margin-top:35px"><i class="fas fa-search"></i> Search Flights</button>
+                                </form>
+                            </div>
+                        </div>
+                        <br>
+                    </div>
         <div class="col-lg">
-            <div class="card" style="border-color:#30aab8; border-width: 2px; padding: 0px">
+            <div class="card shadow p-3 mb-5 bg-white rounded"
+                style="border-color:#30aab8; border-width: 1px; padding: 1px !important; margin-bottom: 10px !important;">
                 <div class="card-body" style="padding:0">
-                    sdvsdvsvs
+
                 </div>
             </div>
         </div>
+        <br>
+        <br>
     </div>
 </div>
-
-
-<style>
-    #searchhis:hover {
-        color: #30aab8 !important;
-    }
-
-    .table-hover tbody tr td,
-    .table-hover tbody tr th {
-        border-color: #a2e6ee
-    }
-
-    .table .thead-light th,
-    .table-hover tbody tr:hover td,
-    .table-hover tbody tr:hover th {
-        background-color: #a2e6ee;
-    }
-
-    .table .thead-light th {
-        border-top: 0;
-        border-color: white
-    }
-</style>
 {%endblock%}
