--- a/Project/AMS/templates/c/purchase_success.html
+++ b/Project/AMS/templates/c/purchase_success.html
@@ -77,7 +77,7 @@
              <div class="col-lg-4">
                  <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
                      <div class="card-body">
-                         <h5 class="card-title" style="text-align:center">Purchase Success</h5>
+                         <h5 class="card-title" style="text-align:center">Purchase Succeeded</h5>
                          <p class="card-text" style="text-align:center">You will be redirected to dashboard in <strong id="second_show">5</strong>
                              seconds.</p>
                      </div>
