--- a/Project/AMS/templates/dashboard.html
+++ b/Project/AMS/templates/dashboard.html
@@ -9,14 +9,16 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-    <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+        </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js"
+        integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js">
     </script>
     <link rel="stylesheet"
@@ -31,6 +33,15 @@
         a:hover {
             color: #30aab8;
         }
+
+        .table-striped>tbody>tr:nth-child(odd)>td,
+        .table-striped>tbody>tr:nth-child(odd)>th {
+            background-color: #bfeef3;
+        }
+
+        .table .thead-light th {
+            background-color: white;
+        }
     </style>
 </head>
 
@@ -39,10 +50,10 @@
         <!--Navigator Bar-->
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #048998;">
             {% if g.role == 'c' %}
-            <a class="navbar-brand" href="/c/search">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+            <a class="navbar-brand" href="/">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
                     data-fa-transform="rotate--45"></i></a>
             {% elif g.role == 'b' %}
-            <a class="navbar-brand" href="/b/search">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+            <a class="navbar-brand" href="/">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
                     data-fa-transform="rotate--45"></i></a>
             {% else %}
             <a class="navbar-brand" href="/">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
@@ -56,9 +67,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         {% if g.role == 'c' %}
-                        <a class="nav-link" href="/c/search">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                        <a class="nav-link" href="/">Home / Search&nbsp;<i class="fas fa-search"></i></a>
                         {% elif g.role == 'b' %}
-                        <a class="nav-link" href="/b/search">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                        <a class="nav-link" href="/">Home / Search&nbsp;<i class="fas fa-search"></i></a>
                         {% else %}
                         <a class="nav-link" href="/">Home / Search&nbsp;<i class="fas fa-search"></i></a>
                         {% endif %}
@@ -72,8 +83,8 @@
                             Hi, {{g.username}}!
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="/{{g.role}}/settings">Profile</a>
-                                <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/{{g.role}}/settings">Profile</a>
+                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/{{g.role}}/flights">My Dashboard</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{{url_for('auth.logout')}}">Log out</a>
