--- a/Project/AMS/templates/index.html
+++ b/Project/AMS/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    {% if result == 'e'%}
+    {% if result == 'n'%}
     <title>Welcome | Contrails</title>
     {% else %}
     <title>Search Result | Contrails</title>
@@ -34,6 +34,7 @@
             if (value != "twoway") {
                 document.getElementById("retu").value = "Not Applicable";
                 document.getElementById("retu").disabled = "disabled";
+                document.getElementById("retu").removeAttribute("required");
             } else {
                 document.getElementById("retu").value = "";
                 document.getElementById("retu").removeAttribute('disabled');
@@ -68,7 +69,7 @@
     <div class="container">
         <!--Navigator Bar-->
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #048998;">
-            <a class="navbar-brand" href="/c/search">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+            <a class="navbar-brand" href="/">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
                     data-fa-transform="rotate--45"></i></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +78,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/c/search">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                        <a class="nav-link" href="/">Home / Search&nbsp;<i class="fas fa-search"></i></a>
                     </li>
 
                 </ul>
@@ -192,7 +193,7 @@
                 <div class="col-lg-3" style="background-color:#bf5859">
                     <br>
                     <p style="color:white">RETURN</p>
-                    <input ID="retu" class="form-control" placeholder="YYYY-MM-DD" name="back_date" />
+                    <input ID="retu" class="form-control" placeholder="YYYY-MM-DD" name="back_date" required />
                     <br>
                     <script>
                         $('#retu').datepicker({
@@ -219,7 +220,11 @@
             </div>
             {% else %}
             <div class="row" style="padding-left: 15px; padding-right: 15px;">
-                <div class="col-lg-9" style="padding:0px"></div>
+                <div class="col-lg-9 text-center text-muted" style="padding:0px">
+                    {% if g.role == 'a' %}
+                    Only customer or booking agent can order tickets.
+                    {% endif %}
+                </div>
                 <div class="col-lg-3" style="text-align:center">
                     <button type="submit" class="btn btn-outline-success btn-block" value="Search"
                         style="height: 5vh; margin-bottom: 0;margin-top: 1vh">Search Flight &nbsp;<i
@@ -236,7 +241,11 @@
         {% endif %}
         <h2 style="text-align:center; padding:10px;color: #048998">Sorry, no matching flights.</h2>
         {% else %}
-        <div class="card" style="border-color:#30aab8; border-width: 2px; padding: 0px;">
+        <div class="card shadow p-3 mb-5 bg-white rounded"
+            style="border-color:#30aab8; border-width: 1px; padding: 0px !important; margin-bottom: 10px !important;">
+            <div class="card-header" style="padding:12px;">
+                <h3 style="margin:0px">Depart</h3>
+            </div>
             <div class="card-body" style="padding:0">
                 <div class="table-responsive">
                     <table class="table table-hover" style="margin:0">
@@ -256,6 +265,32 @@
                                 {% for i in item[:5] %}
                                 <td>{{i}}</td>
                                 {% endfor %}
+                                {% if g.role == 'c' %}
+                                {% if item[3] != "Sold Out"%}
+                                <td>
+                                    <form action="{{url_for('c.confirm_order')}}" method="POST" style="margin:0">
+                                        <input type="radio" value="{{item[4]}}" name="flight_id" checked
+                                            style="visibility:hidden">
+                                        <input type="radio" value="search" name="type" checked
+                                            style="visibility:hidden">
+                                        <input type="submit" name="submit" value="Order"
+                                            class="btn btn-outline-success btn-sm"></form>
+                                </td>
+                                {% endif %}
+                                {% endif %}
+                                {% if g.role == 'b' %}
+                                {% if item[3] != "Sold Out"%}
+                                <td>
+                                    <form action="{{url_for('b.confirm_order')}}" method="POST" style="margin:0">
+                                        <input type="radio" value="{{item[4]}}" name="flight_id" checked
+                                            style="visibility:hidden">
+                                        <input type="radio" value="search" name="type" checked
+                                            style="visibility:hidden">
+                                        <input type="submit" name="submit" value="Order"
+                                            class="btn btn-outline-success btn-sm"></form>
+                                </td>
+                                {% endif %}
+                                {% endif %}
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -267,11 +302,16 @@
         {% if back == 'o' %}
         <!-- search for one way, display nothing -->
         {% elif back == 'e' %}
-        <h2>Back</h2>
+        <br>
+        <h2>Return</h2>
         <h2 style="text-align:center; padding:10px;color: #048998">Sorry, no matching flights.</h2>
         {% else %}
-        <h2>Back</h2>
-        <div class="card" style="border-color:#30aab8; border-width: 2px; padding: 0px;">
+        <br>
+        <div class="card shadow p-3 mb-5 bg-white rounded"
+            style="border-color:#30aab8; border-width: 1px; padding: 0px !important; margin-bottom: 10px !important;">
+            <div class="card-header" style="padding:12px;">
+                <h3 style="margin:0px;">Return</h3>
+            </div>
             <div class="card-body" style="padding:0">
                 <div class="table-responsive">
                     <table class="table table-hover" style="margin:0">
@@ -291,6 +331,32 @@
                                 {% for i in item[:5] %}
                                 <td>{{i}}</td>
                                 {% endfor %}
+                                {% if g.role == 'c' %}
+                                {% if item[3] != "Sold Out"%}
+                                <td>
+                                    <form action="{{url_for('c.confirm_order')}}" method="POST" style="margin:0">
+                                        <input type="radio" value="{{item[4]}}" name="flight_id" checked
+                                            style="visibility:hidden">
+                                        <input type="radio" value="search" name="type" checked
+                                            style="visibility:hidden">
+                                        <input type="submit" name="submit" value="Order"
+                                            class="btn btn-outline-success btn-sm"></form>
+                                </td>
+                                {% endif %}
+                                {% endif %}
+                                {% if g.role == 'b' %}
+                                {% if item[3] != "Sold Out"%}
+                                <td>
+                                    <form action="{{url_for('b.confirm_order')}}" method="POST" style="margin:0">
+                                        <input type="radio" value="{{item[4]}}" name="flight_id" checked
+                                            style="visibility:hidden">
+                                        <input type="radio" value="search" name="type" checked
+                                            style="visibility:hidden">
+                                        <input type="submit" name="submit" value="Order"
+                                            class="btn btn-outline-success btn-sm"></form>
+                                </td>
+                                {% endif %}
+                                {% endif %}
                             </tr>
                             {% endfor %}
                         </tbody>
