--- a/Project/AMS/templates/a/flight_info.html
+++ b/Project/AMS/templates/a/flight_info.html
@@ -44,7 +44,7 @@
 
         <div class="col-lg">
             <div class="card shadow p-3 mb-5 bg-white rounded" style="border-color:#30aab8; border-width: 1px;padding:15px">
-                <h5 class="card-title" style="color:#30aab8">Info for Flight {{flight_id}}</h5><br>
+                <h5 class="card-title" style="color:#30aab8">Passengers of Flight {{flight_id}}</h5><br>
                 <div class="row">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8">
