--- a/Project/AMS/templates/index.html
+++ b/Project/AMS/templates/index.html
@@ -88,7 +88,7 @@
                     <li class="nav-item dropdown active" id="cookie">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
-                            Hi, {{g.username}}!
+                            Hi, {% if g.role == "b" %}{{g.BAID}}{% else %} {{g.username}} {% endif %}!
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="/{{g.role}}/settings">Profile</a>
